Fix tiny bug: - Align left for form label. - Remove Yes/No button in tables in Admin index.

--- a/trunk/assets/css/hero.css
+++ b/trunk/assets/css/hero.css
@@ -124,3 +124,7 @@ body{
 #navbar-btn{
     background-color: burlywood;
 }
+
+.form-horizontal .control-label {
+    text-align: left;
+}
